--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
 	],
 	"require": {
 		"php": ">=5.5.0",
-		"filp/whoops": ">=1.1.2"
+		"filp/whoops": ">=1.1.2",
+		"symfony/http-foundation": ">=2.5.0"
 	},
 	"autoload": {
 		"psr-4": {
-			"Example\\": "src/"
+			"Noframework\\": "src/"
 		}
 	}
 }
