--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	"require": {
 		"php": ">=5.5.0",
 		"filp/whoops": ">=1.1.2",
-		"symfony/http-foundation": ">=2.5.0"
+		"patricklouys/http": ">=1.1.0"
 	},
 	"autoload": {
 		"psr-4": {
