--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	"require": {
 		"php": ">=5.5.0",
 		"filp/whoops": ">=1.1.2",
-		"patricklouys/http": ">=1.1.0"
+		"patricklouys/http": ">=1.1.0",
+		"nikic/fast-route": ">=0.4.0"
 	},
 	"autoload": {
 		"psr-4": {
