--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"php": ">=5.5.0",
 		"filp/whoops": ">=1.1.2",
 		"patricklouys/http": ">=1.1.0",
-		"nikic/fast-route": ">=0.4.0"
+		"nikic/fast-route": ">=0.4.0",
+		"rdlowrey/auryn": ">=1.0.0"
 	},
 	"autoload": {
 		"psr-4": {
