--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"filp/whoops": ">=1.1.2",
 		"patricklouys/http": ">=1.1.0",
 		"nikic/fast-route": ">=0.4.0",
-		"rdlowrey/auryn": ">=1.0.0"
+		"rdlowrey/auryn": ">=1.0.0",
+		"mustache/mustache": ">=2.5.0"
 	},
 	"autoload": {
 		"psr-4": {
