--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"patricklouys/http": ">=1.1.0",
 		"nikic/fast-route": ">=0.4.0",
 		"rdlowrey/auryn": ">=1.0.0",
-		"mustache/mustache": ">=2.5.0"
+		"mustache/mustache": ">=2.5.0",
+		"twig/twig": ">=1.15.0"
 	},
 	"autoload": {
 		"psr-4": {
